@@ -10,7 +10,7 @@ Breaking changes in this mod will be accompanied with bumps to a higher major ve
 
 ### Planet helpers
 
-* `PlanetsLib:planet_extend(config)` - Defines a new planet. This includes a call to data:extend. Does not support `distance`, `orientation` - instead, contains `orbit` as listed below.
+* `PlanetsLib:planet_extend(config)` - Defines a new planet. This includes a call to data:extend. Does not support `distance` or `orientation` - instead, contains `orbit` as listed below.
   * `config.orbit` - Object containing orbital parameters:
     * `parent` - Object containing `name` and `type` fields, corresponding to a parent at data.raw\[type]\[name].
     * `distance` - Number: orbital distance from parent
