@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.7
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed crash for planets without surface properties.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.6
 Date: 2025-01-02
